# pkv-beamten-rechnungs-einreichung

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: commands.rs  db.rs  error.rs  import.rs  lib.rs  models.rs  paperless.rs
src/components/: AppShell.tsx  FilterBar.tsx  InvoiceForm.tsx  InvoiceTable.tsx  StatusBadge.tsx
src/hooks/: useInvoices.ts  usePaperless.ts
src/lib/: api.ts  format.ts  types.ts
src/pages/: DashboardPage.tsx  ImportPage.tsx  InvoiceCreatePage.tsx  InvoiceEditPage.tsx  InvoiceListPage.tsx  NotesPage.tsx  PaperlessImportPage.tsx  SettingsPage.tsx
